--- a/admin/forms/teacher.xml
+++ b/admin/forms/teacher.xml
@@ -57,10 +57,10 @@
         <field name="website" type="text" class="inputbox" size="60"
                label="JBS_TCH_WEBSITE"/>
         <field name="short" type="editor" class="inputbox"
-               label="JBS_TCH_SHORT_DESCRIPTION_LIST_PAGE" filter="JBSMBibleStudyHelper::filterText"
+               label="JBS_TCH_SHORT_DESCRIPTION_LIST_PAGE" filter="CWMProclaimHelper::filterText"
                buttons="true"/>
         <field name="information" type="editor" class="inputbox"
-               label="JBS_TCH_INFORMATION" filter="JBSMBibleStudyHelper::filterText"
+               label="JBS_TCH_INFORMATION" filter="CWMProclaimHelper::filterText"
                buttons="true"/>
         <field name="asset_id" type="hidden" filter="unset"/>
         <field name="rules" type="rules" label="JFIELD_RULES_LABEL"
