--- a/admin/forms/admin.xml
+++ b/admin/forms/admin.xml
@@ -2,22 +2,25 @@
 <form>
 	<field name="id" type="text" readonly="readonly" class="inputbox hidden"/>
 	<fields name="params">
-		<field name="simple_mode" type="radio" class="btn-group" default="1" label="JBS_ADM_SIMPLE_MODE"
-			   description="JBS_ADM_SIMPLE_MODE_DESC" labelclass="control-label" layout="joomla.form.field.radio.switcher">
+		<field name="simple_mode" type="radio" class="form-select-color" default="1" label="JBS_ADM_SIMPLE_MODE"
+		       description="JBS_ADM_SIMPLE_MODE_DESC" labelclass="control-label"
+		       layout="joomla.form.field.radio.switcher">
 			<option value="0">JNO</option>
 			<option value="1">JYES</option>
 		</field>
 		<field name="simple_mode_display" type="radio" class="btn-group" default="0" label="JBS_ADM_SIMPLE_MODE_DISPLAY"
-			   description="JBS_ADM_SIMPLE_MODE_DISPLAY_DESC" labelclass="control-label" layout="joomla.form.field.radio.switcher">
+		       description="JBS_ADM_SIMPLE_MODE_DISPLAY_DESC" labelclass="control-label"
+		       layout="joomla.form.field.radio.switcher">
 			<option value="0">JNO</option>
 			<option value="1">JYES</option>
 		</field>
 		<field name="metakey" type="text" class="inputbox" size="30" rows="3" label="JBS_STY_METAKEYWORDS"
-		       description="JBS_STY_METAKEYWORDS_DESC" labelclass="control-label"/>
+		       description="JBS_STY_METAKEYWORDS_DESC" useglobal="true" labelclass="control-label"/>
 		<field name="metadesc" type="textarea" class="inputbox" cols="30" rows="3" label="JBS_STY_METADESCRIPTION"
 		       description="JBS_STY_METADESCRIPTION_DESC" labelclass="control-label"/>
 		<field name="compat_mode" type="radio" class="btn-group" default="0" label="JBS_ADM_MEDIA_COMPAT_MODE"
-		       description="JBS_ADM_MEDIA_COMPAT_MODE_DESC" labelclass="control-label" layout="joomla.form.field.radio.switcher">
+		       description="JBS_ADM_MEDIA_COMPAT_MODE_DESC" labelclass="control-label"
+		       layout="joomla.form.field.radio.switcher">
 			<option value="0">JNO</option>
 			<option value="1">JYES</option>
 		</field>
@@ -32,7 +35,8 @@
 		<field name="show_location_media"
 		       type="radio"
 		       class="btn-group" default="0" label="JBS_ADM_SHOW_LOCATION_MEDIA"
-		       description="JBS_ADM_SHOW_LOCATION_MEDIA_DESC" labelclass="control-label" layout="joomla.form.field.radio.switcher">
+		       description="JBS_ADM_SHOW_LOCATION_MEDIA_DESC" labelclass="control-label"
+		       layout="joomla.form.field.radio.switcher">
 			<option value="0">JBS_CMN_HIDE</option>
 			<option value="1">JBS_CMN_SHOW</option>
 		</field>
@@ -65,7 +69,10 @@
 			<option value="1">JYES</option>
 		</field>
 		<field name="download_use_button_icon" label="JBS_ADDON_DOWNLOAD_USE_BUTTON"
-		       description="JBS_ADDON_DOWNLOAD_USE_BUTTON_DESC" class="inputbox" type="list" size="15" default=""
+		       description="JBS_ADDON_DOWNLOAD_USE_BUTTON_DESC" type="list"
+		       useglobal="true"
+		       validate="options"
+		       size="15" default=""
 		       labelclass="control-label">
 			<option value="">JBS_CMN_DEFAULT_DOWNLOAD</option>
 			<option value="1">JBS_MED_NONE</option>
@@ -76,9 +83,15 @@
 
 		<field name="download_button_text" type="text" default="Audio" label="JBS_ADDON_BUTTON_TEXT"
 		       description="JBS_ADDON_BUTTON_TEXT_DESC" labelclass="control-label"/>
-		<field name="download_button_type" type="list" class="inputbox" size="15" default=""
+		<field name="download_button_type"
+		       type="list"
+		       useglobal="true"
+		       validate="options"
+		       size="15"
+		       default=""
 		       label="JBS_ADDON_BUTTON_TYPE"
-		       description="JBS_ADDON_BUTTON_TYPE_DESC" labelclass="control-label">
+		       description="JBS_ADDON_BUTTON_TYPE_DESC"
+		       labelclass="control-label">
 			<option value="btn-link">JBS_MED_NO_COLOR</option>
 			<option value="btn-primary">JBS_MED_PRIMARY</option>
 			<option value="btn-success">JBS_MED_SUCCESS</option>
@@ -111,10 +124,10 @@
 		</field>
 		<!--Users for simple_view-->
 		<field name="users" type="sql" extension="com_proclaim" label="JBS_USERS"
-			   description="JBS_USERS_DESC" class="list" multiple="multiple"
-			   query="SELECT id, username FROM #__users ORDER BY id ASC"
-			   key_field="id"
-			   value_field="username" labelclass="username">
+		       description="JBS_USERS_DESC" class="list" multiple="multiple"
+		       query="SELECT id, username FROM #__users ORDER BY id ASC"
+		       key_field="id"
+		       value_field="username" labelclass="control-label">
 			<option value="-1">JBS_CMN_SELECT_USER</option>
 		</field>
 		<!--Thumbnail sizes-->
@@ -270,35 +283,40 @@
 			<field name="jwplayer_autostart" type="radio"
 			       label="JBS_CMN_MEDIA_AUTOSTART"
 			       description="JBS_ADM_JWPLAYER_AUTOSTART_DESC"
-			       class="btn-group" default="false" labelclass="control-label" layout="joomla.form.field.radio.switcher">
+			       class="btn-group" default="false" labelclass="control-label"
+			       layout="joomla.form.field.radio.switcher">
 				<option value="false">JBS_CMN_NO</option>
 				<option value="true">JBS_CMN_YES</option>
 			</field>
 			<field name="jwplayer_playerresponsive" type="radio"
 			       label="JBS_CMN_MEDIA_RESPONSIVE"
 			       description="JBS_ADM_JWPLAYER_RESPONSIVE_DESC"
-			       class="btn-group" default="true" labelclass="control-label" layout="joomla.form.field.radio.switcher">
+			       class="btn-group" default="true" labelclass="control-label"
+			       layout="joomla.form.field.radio.switcher">
 				<option value="false">JBS_CMN_NO</option>
 				<option value="true">JBS_CMN_YES</option>
 			</field>
 			<field name="jwplayer_fallback" type="radio"
 			       label="JBS_ADM_JWPLAYER_FALLBACK"
 			       description="JBS_ADM_JWPLAYER_FALLBACK_DESC"
-			       class="btn-group" default="true" labelclass="control-label" layout="joomla.form.field.radio.switcher">
+			       class="btn-group" default="true" labelclass="control-label"
+			       layout="joomla.form.field.radio.switcher">
 				<option value="false">JBS_CMN_NO</option>
 				<option value="true">JBS_CMN_YES</option>
 			</field>
 			<field name="jwplayer_mute" type="radio"
 			       label="JBS_ADM_JWPLAYER_MUTE"
 			       description="JBS_ADM_JWPLAYER_MUTE_DESC"
-			       class="btn-group" default="false" labelclass="control-label" layout="joomla.form.field.radio.switcher">
+			       class="btn-group" default="false" labelclass="control-label"
+			       layout="joomla.form.field.radio.switcher">
 				<option value="false">JBS_CMN_NO</option>
 				<option value="true">JBS_CMN_YES</option>
 			</field>
 			<field name="jwplayer_stagevideo" type="radio"
 			       label="JBS_ADM_JWPLAYER_STAGE_VIDEO"
 			       description="JBS_ADM_JWPLAYER_STAGE_VIDEO_DESC"
-			       class="btn-group" default="false" labelclass="control-label" layout="joomla.form.field.radio.switcher">
+			       class="btn-group" default="false" labelclass="control-label"
+			       layout="joomla.form.field.radio.switcher">
 				<option value="false">JBS_CMN_NO</option>
 				<option value="true">JBS_CMN_YES</option>
 			</field>
@@ -313,13 +331,15 @@
 		          description="JBS_ADM_PLAYER_ADMIN_DESC">
 			<field name="playlist" type="radio"
 			       label="JBS_ADM_JWPLAYER_PLAYLIST" description="JBS_ADM_JWPLAYER_PLAYLIST_DESC"
-			       class="btn-group" default="false" labelclass="control-label" layout="joomla.form.field.radio.switcher">
+			       class="btn-group" default="false" labelclass="control-label"
+			       layout="joomla.form.field.radio.switcher">
 				<option value="false">JBS_CMN_NO</option>
 				<option value="true">JBS_CMN_YES</option>
 			</field>
 			<field name="jwplayer_listbar" type="radio"
 			       label="JBS_ADM_JWPLAYER_LISTBAR" description="JBS_ADM_JWPLAYER_LISTBAR_DESC"
-			       class="btn-group" default="false" labelclass="control-label" layout="joomla.form.field.radio.switcher">
+			       class="btn-group" default="false" labelclass="control-label"
+			       layout="joomla.form.field.radio.switcher">
 				<option value="false">JBS_CMN_NO</option>
 				<option value="true">JBS_CMN_YES</option>
 			</field>
@@ -327,13 +347,15 @@
 			       label="JBS_ADM_JWPLAYER_LOGO" description="JBS_ADM_JWPLAYER_LOGO_DESC"/>
 			<field name="sharing" type="radio"
 			       label="JBS_ADM_JWPLAYER_SHARING" description="JBS_ADM_JWPLAYER_SHARING_DESC"
-			       class="btn-group" default="false" labelclass="control-label" layout="joomla.form.field.radio.switcher">
+			       class="btn-group" default="false" labelclass="control-label"
+			       layout="joomla.form.field.radio.switcher">
 				<option value="false">JBS_CMN_NO</option>
 				<option value="true">JBS_CMN_YES</option>
 			</field>
 			<field name="jwplayer_related" type="radio"
 			       label="JBS_ADM_JWPLAYER_RELATED" description="JBS_ADM_JWPLAYER_RELATED_DESC"
-			       class="btn-group" default="false" labelclass="control-label" layout="joomla.form.field.radio.switcher">
+			       class="btn-group" default="false" labelclass="control-label"
+			       layout="joomla.form.field.radio.switcher">
 				<option value="false">JBS_CMN_NO</option>
 				<option value="true">JBS_CMN_YES</option>
 			</field>
@@ -350,7 +372,8 @@
 			       class="readonly" default="Comming Soon" labelclass="control-label"/>
 			<field name="captions" type="radio"
 			       label="JBS_ADM_JWPLAYER_CAPTIONS" description="JBS_ADM_JWPLAYER_CAPTIONS_DESC"
-			       class="btn-group" labelclass="control-label" default="false" layout="joomla.form.field.radio.switcher">
+			       class="btn-group" labelclass="control-label" default="false"
+			       layout="joomla.form.field.radio.switcher">
 				<option value="false">JBS_CMN_NO</option>
 				<option value="true">JBS_CMN_YES</option>
 			</field>
@@ -359,7 +382,8 @@
 	<fieldset>
 		<field name="drop_tables" type="radio" default="0"
 		       label="JBS_ADM_DROP_TABLES"
-		       description="JBS_ADM_DROP_TABLES_DESC" class="btn-group" labelclass="control-label" layout="joomla.form.field.radio.switcher">
+		       description="JBS_ADM_DROP_TABLES_DESC" class="btn-group" labelclass="control-label"
+		       layout="joomla.form.field.radio.switcher">
 			<option value="0">JBS_CMN_NO</option>
 			<option value="1">JBS_CMN_YES</option>
 		</field>
@@ -372,14 +396,16 @@
 			<option value="1">JBS_CMN_YES</option>
 		</field>
 	</fieldset>
-	<fieldset addfieldpath="/administrator/components/com_proclaim/models/fields" addrulepath="/administrator/components/com_proclaim/models/rules">
+	<fieldset addfieldpath="/administrator/components/com_proclaim/models/fields"
+	          addrulepath="/administrator/components/com_proclaim/models/rules">
 		<field name="mediaimage" type="mediafileimages" class="inputbox" labelclass="control-label"
 		       label="JBS_ADM_MEDIA_IMAGES" size="20">
 			<option value="-1">JBS_SELECT_IMAGE</option>
 		</field>
 		<field name="media_use_button_icon" label="JBS_ADDON_MEDIA_USE_BUTTON"
 		       description="JBS_ADDON_MEDIA_USE_BUTTON_DESC" class="inputbox" labelclass="control-label"
-		       type="list" size="15" required="true" default="x" message="You must choose image, icon, button or button and icon">
+		       type="list" size="15" required="true" default="x"
+		       message="You must choose image, icon, button or button and icon">
 			<option value="x">JBS_ADM_SELECT_NEW_OPTION</option>
 			<option value="">JBS_MED_NONE</option>
 			<option value="1">JBS_MED_BUTTON_ONLY</option>
