--- a/admin/forms/filter_cwmmessages.xml
+++ b/admin/forms/filter_cwmmessages.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <form>
-	<fieldset addfieldpath="/administrator/components/com_proclaim/models/fields">
+	<fieldset addfieldprefix="CWM\Component\Proclaim\Administrator\Field">
 		<fields name="filter">
 			<field
 					name="search"
