--- a/admin/forms/template.xml
+++ b/admin/forms/template.xml
@@ -888,6 +888,16 @@
 				<option value="0">JBS_CMN_HIDE</option>
 				<option value="1">JBS_CMN_SHOW</option>
 			</field>
+			<field
+					name="captcha"
+					type="plugins"
+					label="COM_CONTACT_FIELD_CAPTCHA_LABEL"
+					folder="captcha"
+					filter="cmd"
+					useglobal="true"
+			>
+			<option value="0">JOPTION_DO_NOT_USE</option>
+			</field>
 			<field name="comments_type" type="list" default="0"
 			       label="JBS_TPL_COMMENT_TYPE" description="JBS_TPL_COMMENT_TYPE_DESC">
 				<option value="0">JBS_TPL_JBS_COMMENTS</option>
